--- a/intro_kim/css/introkim_style.css
+++ b/intro_kim/css/introkim_style.css
@@ -265,8 +265,6 @@ h3.tit {
     margin-bottom: 20px;
 }
 
-.ci .cont .logo em {}
-
 .ci .cont .symbol {
     background: var(--WF);
     border-radius: 32px;
@@ -336,4 +334,85 @@ h3.tit {
     font-size: 16px;
     color: var(--Bcolor);
     line-height: 130%;
+}
+
+/* .v_and_m */
+
+.v_and_m .cont {
+    display: flex;
+    flex-direction: column;
+    flex-direction: 1;
+    align-content: space-between;
+    gap: 40px;
+}
+
+.v_and_m .cont div {
+    width: 100%;
+    height: 520px;
+}
+
+.v_and_m .cont .vision {
+    background-image: url(../assets/vision.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: var(--WF);
+    border-radius: 32px;
+}
+
+.v_and_m .cont .vision .txt {
+    width: 1360px;
+    position: relative;
+    top: -437px;
+    left: 80px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.v_and_m .cont .vision .txt p {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 130%;
+    margin-bottom: 20px;
+}
+
+.v_and_m .cont .vision .txt em {
+    font-size: 20px;
+    line-height: 130%;
+    width: 408px;
+}
+
+.v_and_m .cont .mission {
+    background-image: url(../assets/mission.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: var(--WF);
+    border-radius: 32px;
+}
+
+.v_and_m .cont .mission .txt {
+    width: 1360px;
+    position: relative;
+    top: -450px;
+    left: 0px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.v_and_m .cont .mission .txt p {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 130%;
+    text-align: right;
+    margin-bottom: 20px;
+}
+
+
+.v_and_m .cont .mission .txt em {
+    font-size: 20px;
+    line-height: 130%;
+    width: 408px;
+    text-align: right;
+    float: right;
 }
