비전앤미션 배경 컬러 화이트 교채

--- a/intro_kim/css/introkim_style.css
+++ b/intro_kim/css/introkim_style.css
@@ -338,6 +338,10 @@ h3.tit {
 
 /* .v_and_m */
 
+.v_and_m {
+    background: var(--WF);
+}
+
 .v_and_m .cont {
     display: flex;
     flex-direction: column;
