--- a/intro_kim/css/introkim_style.css
+++ b/intro_kim/css/introkim_style.css
@@ -54,38 +54,45 @@ section {
 }
 
 .main_cach .txt {
-    display: contents;
-    flex-direction: column;
     position: absolute;
-    top: 200px;
-    left: 0;
-    z-index: 100;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 30%);
+    /* 완전 중앙 */
+    display: flex;
+    flex-direction: column;
+    /* 세로 배치 */
+    align-items: center;
+    /* 가로 중앙 정렬 */
+    justify-content: center;
+    /* 세로 내부 정렬 */
+    text-align: center;
+    gap: 10px;
+    /* 요소 간 간격 */
+    z-index: 4;
+    width: 100%;
+    max-width: 800px;
+    color: var(--Wcolor);
+
 }
 
 .main_cach .txt p.head_copy {
     font-size: 70px;
-    color: var(--Wcolor);
     font-weight: 700;
-    text-align: center;
-    margin: 0 10px;
-    padding: 10px;
-}
-
-.main_cach .txt p.head_copy.first {
-    display: inline-block;
+    line-height: 130%;
     background: var(--subRed2-900);
-}
-
-.main_cach .txt p.head_copy.second {
+    padding: 0 10px;
     display: inline-block;
-    background: var(--subRed2-900);
+
 }
 
 .main_cach .txt em {
     font-size: 30px;
     font-weight: 400;
     text-align: center;
-    margin-top: 24px;
+    margin-top: 10px;
+    line-height: 130%;
+    color: var(--Bcolor);
 
 }
 
@@ -225,6 +232,8 @@ h3.tit {
 
 .ci {
     background: #E5E5E5;
+    padding: 0;
+    padding-bottom: 150px;
 }
 
 .ci .inner {
@@ -236,11 +245,9 @@ h3.tit {
 
 .ci .bar {
     position: relative;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100px;
-    background-color: yellow;
+    background-color: var(--Wcolor);
     border-radius: 0 0 120px 120px;
 }
 
