--- a/intro_kim/css/introkim_style.css
+++ b/intro_kim/css/introkim_style.css
@@ -408,17 +408,16 @@ h3.tit {
     font-weight: 700;
     color: var(--MainColor-400);
     margin-bottom: 24px;
-    text-align: left;
     /* 시안처럼 연도는 왼쪽 정렬이 자연스럽다면 */
     position: absolute;
-    left: 50%;
+    left: 58px;
     top: calc(var(--tline) - 11.5px);
     /* svg 중심선 기준 */
     transform: translate(-50%, calc(-100% - 10px));
     /* 자기 높이만큼 위 + 여백 10px */
     margin: 0;
     /* 기존 margin 제거 */
-    text-align: center;
+    text-align: left;
     z-index: 3;
     /* svg/라인보다 위 */
     font-size: 56px;
@@ -426,11 +425,6 @@ h3.tit {
     color: var(--MainColor-400);
 }
 
-
-.history .cont_hori_swipe ul li h5.years {
-    text-align: center;
-    margin-bottom: 24px;
-}
 
 .history .cont_hori_swipe ul li p {
     font-size: 30px;
