--- a/intro_kim/css/introkim_style.css
+++ b/intro_kim/css/introkim_style.css
@@ -33,6 +33,7 @@ section {
     align-items: center;
     justify-content: center;
     position: relative;
+    background: #ccc;
 }
 
 .main_cach .swiper {
