--- a/intro_kim/css/introkim_style.css
+++ b/intro_kim/css/introkim_style.css
@@ -341,6 +341,10 @@ h3.tit {
     flex: 1;
 }
 
+.history .cont_hori_swipe ul li.y_group {
+    width: max-content;
+}
+
 .history .cont_hori_swipe ul li.y_group>ul {
     display: flex;
     gap: 90px;
@@ -472,7 +476,7 @@ h3.tit {
     gap: 40px;
 }
 
-.v_and_m .cont>div {
+.v_and_m .cont article {
     position: relative;
     width: 100%;
     height: 520px;
@@ -482,20 +486,33 @@ h3.tit {
     background-position: center;
     overflow: hidden;
     color: var(--WF);
+    /* transition: .8s; */
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.1));
 }
 
-.v_and_m .vision {
+.v_and_m .cont article:hover {
+    background-size: 120%;
+}
+
+.v_and_m .cont article::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
     background-image: url("../assets/vision.jpg");
     transition: .8s;
 }
 
-.v_and_m .vision:hover {
-    transform: scale(1.2);
+.v_and_m .cont article.mission::before {
+    background-image: url("../assets/mission.png");
 }
 
+.v_and_m .cont article:hover::before {
+    transform: scale(1.1);
+}
 
-.v_and_m .vision::after {
-    content: "VISION";
+.v_and_m .cont article::after {
     position: absolute;
     top: 0x;
     left: 80px;
@@ -513,32 +530,14 @@ h3.tit {
     backdrop-filter: blur(10px);
 }
 
-.v_and_m .mission {
-    background-image: url("../assets/mission.png");
-    transition: .8s;
+.v_and_m .vision::after {
+    content: "VISION";
 }
 
-.v_and_m .mission:hover {
-    transform: scale(1.2);
-}
+
 
 .v_and_m .mission::after {
     content: "MISSION";
-    position: absolute;
-    top: 0px;
-    left: 80px;
-    width: 140px;
-    height: 60px;
-    color: var(--WF);
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    font-size: 18px;
-    font-weight: 700;
-    padding-bottom: 20px;
-    border-radius: 0 0 8px 8px;
-    background: rgb(57, 65, 153, .7);
-    backdrop-filter: blur(10px);
 }
 
 .v_and_m .txt {
@@ -570,11 +569,4 @@ h3.tit {
     font-size: 16px;
     line-height: 130%;
     opacity: .9;
-}
-
-.v_and_m .cont>div::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.1));
 }
